# backend

./: .gitignore  .gitmodules  DEPLOY.md  Untitled-2024-12-12-2213.excalidraw  architecture.excalidraw  create_db.sql
devctrl/: .gitignore  Cargo.toml  config.default.json  config.json  request.schema.json  response.schema.json
devctrl/scripts/: test.rhai
devctrl/src/: common.rs  main.rs  scripting.rs
simple_dev/: config.default.h  json.h  simple_dev.ino  timee.h
time_server/: Cargo.toml  config.default.json
time_server/src/: main.rs
